use vavr collections